# lightning-template

./: .gitignore  README.md  config.example.json  environment.yml  model.py  pyproject.toml  test.py  train.py
config/: config.py  json_parser.py
datasets/: CIFAR10.py  CIFAR100.py  CIFAR10_128.py  Imagenette.py  Upscaled_CIFAR10.py  __init__.py  constants.py  dataset.py  factory.py  load_dataset.py  transforms.py
datasets/utils/: load_dataset.py
metrics/: factory.py  visualizer.py
model/: model.py  optimizers.py  schedulers.py
networks/: __init__.py  constants.py  efficientnetv2.py  factory.py  load_network.py  resnet50.py  vision_transformer.py
networks/utils/: load_network.py
src/: config.py  exceptions.py
src/config/: config.py  json_parser.py
src/datasets/: CIFAR10.py  Imagenette.py  __init__.py  base.py  cifar10.py  enums.py  factory.py  imagenette.py  transforms.py
src/metrics/: factory.py  visualizer.py
src/model/: criterion.py  metrics.py  model.py  optimizers.py  schedulers.py
src/networks/: __init__.py  base.py  efficientnetv2.py  enums.py  factory.py  resnet50.py  vision_transformer.py
src/utils/: logging.py
utils/: config.py  json_parser.py  load_dataset.py  load_network.py
visualizations/: GradCam.ipynb
visualizations/utils/: reverse_transform.py
