[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.4.0",
    "matplotlib>=3.9.3",
    "pydantic>=2.10.3",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "structlog>=25.3.0",
    "tensorboard>=2.19.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[tool.ruff]
line-length = 110
